--- a/Day 10/test/index.html
+++ b/Day 10/test/index.html
@@ -64,10 +64,12 @@
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum sed voluptatibus nam eligendi laudantium quo.
                 </p>
 
-                <button type="button" class="btn btn-outline-secondary">View</button>
-                <button type="button" class="btn btn-outline-secondary">Edit</button>
+                <div>
+                    <button type="button" class="btn btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-outline-secondary">Edit</button>
 
-                <div class="text-right d-inline"> 9 mins</div>
+                    <div class="text-right d-inline"> 9 mins</div>
+                </div>
 
 
             </div>
