--- a/Day 10/test/index.html
+++ b/Day 10/test/index.html
@@ -56,7 +56,7 @@
 
         <br><br><br>
 
-        <div class="row mt-5 mb-5">
+        <div class="row mt-5 mb-5 pb-5">
             <div class="col-4 image">
                 <img src="img/BDMig.jpg">
 
